--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/framework-bundle": "6.2.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/runtime": "6.2.*",
+        "symfony/validator": "6.2.*",
         "symfony/yaml": "6.2.*"
     },
     "config": {
@@ -67,6 +68,7 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.2",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
