--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^7.2",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
