--- a/config/routes/framework.yaml
+++ b/config/routes/framework.yaml
@@ -1,3 +1,6 @@
+api_login_check:
+    path: /api/login_check
+
 when@dev:
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
